# C-PAC

./: .gitignore  CHANGELOG.md  Dockerfile  Singularity  cpac_install.sh  pyproject.toml  requirements.txt  variant-surface.Singularity  version
.circleci/: config.yml  config.yml.orig  main.yml
.github/Dockerfiles/: C-PAC.develop-fMRIPrep-LTS-xenial.Dockerfile  FreeSurfer.6.0.1-xenial.Dockerfile  Ubuntu.bionic-non-free.Dockerfile  Ubuntu.xenial-20200114.Dockerfile  base-lite.Dockerfile
.github/README/: README.md
.github/scripts/: copyright_update.py  local_ghcr  minify-freesurfer-6.0.1.sh
.github/templates/: license_notice_CPAC.txt
.github/workflows/: build_C-PAC.yml  build_and_test.yaml  build_and_test.yml  build_stages.yml  build_stages.yml.orig  check_updated_version.yml  delete_images.yml  gather_schema_for_gui.yml  github_check.yml  on_push.yaml  on_push.yml  regression_test_lite.yml  regtest.yaml  smoke_test_participant.yml
CPAC/: __main__.py  info.py
CPAC/alff/: alff.py
CPAC/anat_preproc/: anat_preproc.py  ants.py  lesion_preproc.py  utils.py
CPAC/aroma/: aroma.py  aroma_test.py
CPAC/connectome/: connectivity_matrix.py
CPAC/cwas/: pipeline.py
CPAC/distortion_correction/: distortion_correction.py
CPAC/easy_thresh/: easy_thresh.py
CPAC/func_preproc/: func_ingress.py  func_preproc.py
CPAC/generate_motion_statistics/: generate_motion_statistics.py
CPAC/group_analysis/: group_analysis.py
CPAC/image_utils/: spatial_smoothing.py  statistical_transforms.py
CPAC/isc/: pipeline.py
CPAC/longitudinal_pipeline/: longitudinal_preproc.py  (+1 more)
(+146 files in other folders)
